# Team02-Course

./: .clang-tidy  .gitignore  .gitmodules  Cross-Compiling-Qt.md  DockerFileRasp  Dockerfile  Dockerfile.app  Dockerfile.zenoh  DockerfileDeployJetson  DockerfileDeployRasp  Doxyfile  README.md  buildQTLinux.sh  deployQtApp.sh  deployToJetson.sh  deployToRasp.sh  helperTasks.sh  update_submodules.sh
.github/workflows/: doxygenGeneration.yml
deploy/scripts/: deployToJetson.sh  update_submodules.sh
doc/diagrams/: Untitled Diagram.drawio  architecture.drawio  workflow.drawio
docs/: DoxMain.md  myproject.tag
docs/MachineLearning/: model_specs.md  requirements.md
docs/diagrams/: Architecture_JetRacer.drawio  Communication.drawio  Electrical Upgrade Diagram  Untitled Diagram.drawio  architecture2.drawio  lane_post_processing.drawio
docs/guidelines/: Cross-Compiling-Qt.md  DoxGuideLinesIndex.md  GeneralGuidelines.md  buildAarch64Env.sh  clang-install-guidelines.md  features.md  how-to-create-adr-with-adr-tools.md  influxDB-guideline
docs/html/: dir_49e56c817e5e54854c35e136979f97ca.html  dir_5a84c54d8762f8bd605825f4a42e837c.html  dir_7b321a4e08e22c47de0e838bfb915414.html  dir_a01546041f0044a8080f4e454d392f8d.html  doxygen_crawl.html  index.html  index.js  md_docs_2architecture_2decisions_20001-record-architecture-decisions.html  md_docs_2architecture_2decisions_20002-use-jetson-nano-for-processing-and-raspberry-pi-for-display.html  navtreedata.js  (+5 more)
docs/resources/: CMakeLists.txt  aicontroller.cpp  computervision.md  controller.cpp  converter.cpp  yolo.cpp
(+70 files in other folders)
